--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Anjil Niraula</h1>
         <p><em>Founder and CTO of <strong><a href="https://twitter.com/anjiln">Anjil Developers Group</a></strong></em></p>
-        <p>I am a student studying computer science in kathord college</p>
+        <p>Programming and infosec enthusiast</p>
       </td>
     </tr>
   </table>
@@ -24,7 +24,6 @@
     <li>Nepal Ideal School</li>
     <li>Indradhanush Higher Secondary School</li>
     <li>Little Angels College</li>
-    <li>Kathford Int'l College</li>
   </ul>
   <hr>
   <h3><strong>Work experience</strong></h3>
